# path_tracing

./: .clang-format  CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/geometry/: CMakeLists.txt  matrix3d.h  point3d.cpp  point3d.h  utils.cpp  utils.h  vec3d.cpp  vec3d.h
src/images/: CMakeLists.txt  png_utils.cpp  png_utils.h
src/objects/: CMakeLists.txt  camera.cpp  camera.h  material.h  ray.cpp  ray.h  render.cpp  render.h  scene.cpp  scene.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/parsing/: CMakeLists.txt  camloader.cpp  camloader.h  error.h  objloader.cpp  objloader.h  parsing_utils.cpp  parsing_utils.h
src/rendering/: CMakeLists.txt  camera.cpp  render.cpp  render.h  scene.cpp  scene.h
src/view/: CMakeLists.txt  color.cpp  color.h  view.cpp  view.h
